# tsukuyomi-os

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  TERMS.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.cargo/: config.toml
scripts/: Install-Tsukuyomi.bat  Install-Tsukuyomi.ps1  Nuke-Tsukuyomi.bat  Nuke-Tsukuyomi.ps1
src/: app.rs  launch_external.rs  main.rs  ollama_setup.rs  rustdesk.rs  scan.rs  uninstall.rs
src/ironos/: cli.py  db.py  local_store.py  main.py  tsukuyomi.tcss  tui.py  uninstall.py  vm_builder.py  vm_launcher.py  vm_manager.py  web.py
src/screens/: ai_agent.rs  aimap.rs  assets.rs  backups.rs  canarytokens.rs  connect.rs  crunch.rs  cve.rs  desktop.rs  engagements.rs  evidence.rs  fawkes.rs  findings.rs  firewall.rs  hashcat.rs  hashid.rs  health.rs  hydra.rs  john.rs  login.rs  mod.rs  netryx.rs  network.rs  onionshare.rs  osint_notes.rs  paramspider.rs  phoneinfoga.rs  photon.rs  reconftw.rs  remote_support.rs  sandbox.rs  scan_request.rs  settings.rs  setup.rs  updates.rs  vault.rs  voidaccess.rs
src/store/: ai.rs  ai_client.rs  ai_tools.rs  aimap.rs  assets.rs  backups.rs  canarytokens.rs  connections.rs  crunch.rs  cve.rs  engagements.rs  evidence.rs  fawkes.rs  findings.rs  hashcat.rs  hashid.rs  hydra.rs  john.rs  mod.rs  netryx.rs  onionshare.rs  osint_notes.rs  paramspider.rs  phoneinfoga.rs  photon.rs  reconftw.rs  remote_support.rs  reports.rs  scan_requests.rs  settings.rs  users.rs  vault.rs  voidaccess.rs
src/ui/: theme.rs  widgets.rs
src/vm/: builder.rs  detect.rs  launch.rs  mod.rs  network.rs  scancode.rs
templates/: anyrun.html  desktop.html  login.html
