[package]
name = "tsukuyomi-os"
version = "0.3.0"
edition = "2021"
description = "Tsukuyomi OS - terminal-based personal OS shell with native VM sandbox"

[[bin]]
name = "tsukuyomi"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
strip = true
