[package]
name = "tsukuyomi-os"
version = "26.15.7"
edition = "2021"
description = "Tsukuyomi OS - terminal-based personal OS shell with native VM sandbox"

[[bin]]
name = "tsukuyomi"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
urlencoding = "2"
chrono = "0.4"
chrono-tz = "0.10"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"

[profile.release]
opt-level = 3
lto = true
strip = true
