[project]
name = "tsukuyomi-os"
version = "0.2.0"
description = "Tsukuyomi OS — terminal-based personal OS shell with native VM sandbox"
requires-python = ">=3.10"
dependencies = [
    "textual",
    "click",
    "platformdirs",
]

[project.scripts]
tsukuyomi = "ironos.tui:main"
tsukuyomi-web = "ironos.main:main"
tsukuyomi-build-vm = "ironos.vm_builder:main"
tsukuyomi-uninstall = "ironos.uninstall:nuke"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ironos"]
